# Showcase-Review

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
showcase-review/: main.py
showcase-review/infra/: database.py
showcase-review/infra/models/: models.py
showcase-review/providers/: hashCrypt.py
showcase-review/routes/: UserRouter.py
showcase-review/schemas/: schemas.py
showcase-review/services/: UserService.py
