[tool.poetry]
name = "showcase-review"
version = "0.1.0"
description = "This project aims to put into practice the development of a system that was designed in the systems analysis course."
authors = ["alexandrejastrow <alexandre.jastrow@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"
passlib = "^1.7.4"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
